<resources>
    <string name="app_name">UltrasonicSensor</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="open_connection">Open Connection</string>
    <string name="close_connection">Close connection</string>
    <string name="reset_app">Reset App</string>
    <string name="clear_console">Clear Console</string>
    <string name="calc_avg">Calc Avg</string>
    <string name="print_data">Print Data</string>
    <string name="measurements">Measurements:</string>
    <string name="zero">0</string>
    <string name="show_raw_data">Show raw data</string>
    <string name="hide_raw_data">Hide raw data</string>
    <string name="save_data_to_csv">Save data to CSV</string>
    <string name="buffer_timeout">Buffer timeout [ms]</string>
    <string name="impacts">Impacts:</string>
    <string name="min_diff">Min. Diff.</string>
    <string name="avg_measur">Avg. Measur.</string>
    <string name="min_time_interval">Interval between impacts [ms]:</string>
    <string name="console_cleared">CONSOLE CLEARED</string>
    <string name="filter_deviation">Filter deviation</string>
    <string name="recorded_measurements">Recorded measurements:</string>
    <string name="filtered_measurements">Filtered measurements:</string>
</resources>