<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.activities.MainActivity">

    <Button
        android:id="@+id/openConnection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickOpenConnection"
        android:text="@string/open_connection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <Button
        android:id="@+id/btnRecording"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickRecording"
        android:text="@string/start_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveDataToCsv" />

    <Button
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClickReset"
        android:text="@string/reset_app"
        app:layout_constraintBottom_toBottomOf="@+id/clearConsole"
        app:layout_constraintEnd_toStartOf="@+id/clearConsole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearConsole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickClearConsole"
        android:text="@string/clear_console"
        app:layout_constraintEnd_toStartOf="@+id/btnRawDataLog"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRawDataLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="onClickRawDataLog"
        android:text="@string/show_raw_data"
        app:layout_constraintEnd_toStartOf="@+id/saveDataToCsv"
        app:layout_constraintStart_toEndOf="@+id/clearConsole"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveDataToCsv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="onClickSaveDataToCsv"
        android:text="@string/save_data_to_csv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRawDataLog"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/filterDeviationPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecording">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/impactsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/impacts"
        app:layout_constraintEnd_toStartOf="@+id/impactsCounter"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/btnRecording" />

    <TextView
        android:id="@+id/impactsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="right"
        android:minWidth="33dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/impactsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/impactsLabel"
        app:layout_constraintTop_toTopOf="@+id/impactsLabel" />

    <TextView
        android:id="@+id/measurementsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/measurements"
        app:layout_constraintEnd_toStartOf="@+id/measurementsCounter"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/impactsLabel" />

    <TextView
        android:id="@+id/measurementsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:minWidth="33dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/measurementsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/measurementsLabel"
        app:layout_constraintTop_toTopOf="@+id/measurementsLabel" />

    <TextView
        android:id="@+id/recordedMeasurementsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recorded_measurements"
        app:layout_constraintEnd_toStartOf="@+id/measurementsCounter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/measurementsLabel" />

    <TextView
        android:id="@+id/recordedMeasurementsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:minWidth="33dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/recordedMeasurementsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/measurementsLabel"
        app:layout_constraintTop_toTopOf="@+id/recordedMeasurementsLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/filteredMeasurementsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filtered_measurements"
        app:layout_constraintEnd_toStartOf="@+id/measurementsCounter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/recordedMeasurementsLabel" />

    <TextView
        android:id="@+id/filteredMeasurementsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="right"
        android:minWidth="33dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/filteredMeasurementsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/measurementsLabel"
        app:layout_constraintTop_toTopOf="@+id/filteredMeasurementsLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bufferTimeOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/min_time_interval"
        android:textColor="#54000000"
        app:layout_constraintBottom_toBottomOf="@+id/openConnection"
        app:layout_constraintEnd_toStartOf="@+id/minIntervalTextValue"
        app:layout_constraintStart_toEndOf="@+id/openConnection"
        app:layout_constraintTop_toTopOf="@+id/openConnection" />

    <TextView
        android:id="@+id/minIntervalTextValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:minWidth="33dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/bufferTimeOutLabel"
        app:layout_constraintEnd_toStartOf="@+id/btnRecording"
        app:layout_constraintStart_toEndOf="@+id/bufferTimeOutLabel"
        app:layout_constraintTop_toTopOf="@+id/bufferTimeOutLabel" />

    <TextView
        android:id="@+id/minDifferenceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/min_diff"
        app:layout_constraintBottom_toTopOf="@+id/minDifferencePicker"
        app:layout_constraintEnd_toEndOf="@+id/minDifferencePicker"
        app:layout_constraintStart_toStartOf="@+id/minDifferencePicker" />

    <NumberPicker
        android:id="@+id/minDifferencePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/filterDeviationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_deviation"
        app:layout_constraintBottom_toTopOf="@+id/filterDeviationPicker"
        app:layout_constraintEnd_toEndOf="@+id/filterDeviationPicker"
        app:layout_constraintStart_toStartOf="@+id/filterDeviationPicker" />

    <NumberPicker
        android:id="@+id/filterDeviationPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minDifferencePicker" />

    <SeekBar
        android:id="@+id/minIntervalSeekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:max="19"
        android:progress="4"
        app:layout_constraintBottom_toBottomOf="@+id/btnRecording"
        app:layout_constraintEnd_toStartOf="@+id/btnRecording"
        app:layout_constraintStart_toEndOf="@+id/openConnection"
        app:layout_constraintTop_toTopOf="@+id/btnRecording" />

</androidx.constraintlayout.widget.ConstraintLayout>